--- a/wiki/TestbedAbstractionAPI.wiki
+++ b/wiki/TestbedAbstractionAPI.wiki
@@ -1,3 +1,8 @@
+#summary Testbed Abstraction API
+#labels CONET, REST, testbed, federation, WSN, API
+#sidebar TableOfContents
+
+
 =Overview=
 
 The purpose of this document is to support both the implementation and use of the Testbed Abstraction API (TAA), an interface that aims to expose the capabilities of a cooperating object testbed as a service. The TAA was conceived in the context of the European Network of Excellence project CONET as part of the CONET Testbed Federation (CTF), where it represents a uniform interface across all member testbeds. It allows the developers for building applications (standalone, client-side web applications, server-side web applications, mash-ups) accessing the services offered by a given testbed. A prototype of the TAA has been implemented on top of TWIST, the TU Berlin Wireless Indoor Sensor Network, as a prove of concept of research for review and evaluation within the same project.
@@ -17,7 +22,7 @@ The implementation of the TAA can be divided in front-end and back-end. The fron
 
 =Services=
 
-During the design phase of the TAA we leveraged the mature usage experience of our testbed (TWIST) in order to identify the need and the key steps of a typical experiment with cooperating objects. Testbeds play and important role in the design, development and test of protocols and applications as they provide controlled execution of experiments in a realistic environment, where functional and non-functional behaviours can be tracked and stored for further analysis and evaluation.
+During the design phase of the TAA we leveraged the mature usage experience of our testbed (TWIST) in order to identify the need and the key steps of a typical experiment with cooperating objects. Testbeds play and important role in the design, development and test of protocols and applications as they provide controlled execution of experiments in a realistic environment, where functional and non-functional behaviors can be tracked and stored for further analysis and evaluation.
 
 ==Resource Discovery==
 
@@ -36,4 +41,6 @@ During the design phase of the TAA we leveraged the mature usage experience of o
 ==Introduction==
 
 All testbed resources are accessed and manipulated in a similar way. Resources are identified by URLs and accessed by a common interface (HTTP methods). A list of resources is usually available through `/[resource name]`, while a single specific resource through `/[resource name]/[resource id]` and related subresources (i.e. a user's jobs) through `/[resource name]/[resource id]/[subresource name]`. It exposes testbed resources as REST resources, which can be accessed and manipulated through a uniform interface.
+
+
 
