--- a/wiki/TestbedAbstractionAPI.wiki
+++ b/wiki/TestbedAbstractionAPI.wiki
@@ -42,5 +42,7 @@ During the design phase of the TAA we leveraged the mature usage experience of o
 
 All testbed resources are accessed and manipulated in a similar way. Resources are identified by URLs and accessed by a common interface (HTTP methods). A list of resources is usually available through `/[resource name]`, while a single specific resource through `/[resource name]/[resource id]` and related subresources (i.e. a user's jobs) through `/[resource name]/[resource id]/[subresource name]`. It exposes testbed resources as REST resources, which can be accessed and manipulated through a uniform interface.
 
-
-
+|| `HTTP GET [resource URL]` || Gets a representation of a given resource indicated by the URL ||
+|| `HTTP POST [resource URL]` || Create a new resource according to the representation provided in the request ||
+|| `HTTP PUT [resource URL]` || Updates the resource at the given URL by providing a new representation ||
+|| `HTTP DELETE [resource URL]` || Updates the resource at the given URL by providing a new representation ||
