--- a/wiki/TestbedAbstractionAPI.wiki
+++ b/wiki/TestbedAbstractionAPI.wiki
@@ -1,5 +1,5 @@
 #summary Testbed Abstraction API
-#labels CONET, REST, testbed, federation, WSN, API
+#labels CONET,REST,testbed,federation,WSN,API
 #sidebar TableOfContents
 
 
@@ -11,6 +11,10 @@ The TAA has been designed according to the REST architectural style. REST introd
 
 After an introductory description of the core design aspects we provide a detailed specification of resources involved and we will show how to perform typical testbed operations in terms of manipulation of such resources, according to the REST architectural style.
 Then, we provide a series of guidelines for the integration of the TAA with the legacy native interface provided by a given existing testbed for cooperating objects. We will show to install and extend the TAA software that we developed in order to adapt to any specific testbed. Finally, a detailed tutorial will show how to execute a sample experiment using the TAA.
+
+The following example uses cURL to simply access the TA API
+
+{{{$ curl https://api.cotefe.net/jobs/}}}
 
 =System Architecture=
 
