--- a/wiki/TestbedAbstractionAPI.wiki
+++ b/wiki/TestbedAbstractionAPI.wiki
@@ -1,6 +1,6 @@
 =Overview=
 
-The purpose of this document is to support both the implementation and use of the Testbed Abstraction API (TAA), an interface that aims to expose the capabilities of a cooperating object testbed as a service. The TAA was conceived in the context of the European Network of Excellence project CONET as part of the CONET Testbed Federation (CTF), where it represents a uniform interface across all member testbeds. It allows the developers for building applications (standalone, client-side web applications, server-side web applications, mash-ups) accessing the services offered by a given testbed. A prototype of the TAA has been implemented on top of TWIST, the TU Berlin Wireless Indoor Sensor Network, as a prove of concept of research for review and evaluation within the same project.
+The purpose of this document is to support the implementation and use of the Testbed Abstraction API (TAA), an interface that aims to expose the capabilities of a cooperating object testbed as a service. The TAA was conceived in the context of the European Network of Excellence project CONET as part of the CONET Testbed Federation (CTF), where it represents a uniform interface across all member testbeds. It allows the developers for building applications (standalone, client-side web applications, server-side web applications, mash-ups) accessing the services offered by a given testbed through a common interface. A prototype of the TAA has been implemented on top of TWIST, the TU Berlin Wireless Indoor Sensor Network, as a prove of concept of our research for review and evaluation within the CONET project.
 
 The TAA has been designed according to the REST architectural style. REST introduces design constraints with the promise to fully leverage the potential of the Web and its worldwide distributed infrastructure, in order to achieve scalability, reliability, extensibility of the service and interoperability with other Web Services.
 
@@ -100,144 +100,60 @@ Example:
 
 Following the REST constrain known as Hypermedia As The Engine Of Application State (HATEOAS) the entire resource tree structure can be explored starting from / (which represents the testbed resource) and then following the link attributes provided by each resource representation. Each interaction (HTTP request) with the TA API is stateless, there is no awareness about clients on the server and only the client is responsible of keeping the application state.
 
-<wiki:comment>
-
 ===User===
 
 The user resource represents the user as main actor of the TAA. It contains all the information realted to the user of the system such as name, organization, contact information and a unique identifier (OpenID identifier).
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
+|| `URI` || A GET against this URI refreshes the representation of this resource ||
 || `name` || An arbitrary given name for this resource ||
 || `media-type` || `application/json` ||
 
 ===Federation===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Experiment===
 
 The Experiment resource enables testbed-independent experiment description in terms of required resources (expressed in Property Sets) and list of operations (expressed in Virtual Tasks) to be executed in order to complete a given experiment. The Experiment resource can be created, deleted and modified, and easily shared with other users of the federation.
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===PropertySet===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===VirtualNode===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===VirtualNodeGroup===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Image===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===VirtualTask===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Testbed===
 
 The Testbed represents the whole testbed infrastructure made of hardware, software resources, scheduled jobs and users. It is the root resource, i.e. the starting point for self discovery/search of any sort of resource by navigation of iterated exploration of URL links, similarly to the web browser model.
 The testbed resource represents the testbed itself and contains all informations about characteristics, assets and capabilities. It is the starting point for all REST resources to be explored and discovered.
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Node===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===NodeGroup===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Socket===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Job===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Task===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Trace===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Log===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Status===
 
 The status resource is an auxiliary resource that we introduced to provide some information about the status of an asynchronous request
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Platform===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Sensor===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 ===Actuator===
-
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
 
 ===Interface===
 
-|| `URI` || A GET against this URI refreshes the representation of this resource` ||
-|| `name` || An arbitrary given name for this resource ||
-|| `media-type` || `application/json` ||
-
 =Code=
-
-</wiki:comment>
 
